--- a/distribution/style.css
+++ b/distribution/style.css
@@ -616,28 +616,28 @@ video {
   margin-right: 1.25rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.mt-\[15px\] {
+  margin-top: 15px;
 }
 
-.mt-\[100px\] {
-  margin-top: 100px;
-}
-
-.mt-\[1px\] {
-  margin-top: 1px;
+.mt-\[6px\] {
+  margin-top: 6px;
 }
 
 .mt-\[80px\] {
   margin-top: 80px;
 }
 
-.mt-\[90px\] {
-  margin-top: 90px;
+.mt-\[25px\] {
+  margin-top: 25px;
 }
 
-.mt-\[4px\] {
-  margin-top: 4px;
+.mt-\[17px\] {
+  margin-top: 17px;
+}
+
+.mt-\[11px\] {
+  margin-top: 11px;
 }
 
 .flex {
@@ -666,6 +666,10 @@ video {
 
 .w-\[350px\] {
   width: 350px;
+}
+
+.w-\[470px\] {
+  width: 470px;
 }
 
 .w-\[50\%\] {
@@ -708,14 +712,18 @@ video {
   text-wrap: nowrap;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .p-0 {
@@ -724,6 +732,16 @@ video {
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .font-main {
@@ -776,6 +794,16 @@ video {
 .text-slate-800 {
   --tw-text-opacity: 1;
   color: rgb(30 41 59 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:bg-slate-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-700:hover {
