Adding New Section

--- a/source/input.css
+++ b/source/input.css
@@ -16,4 +16,7 @@
         @apply w-[100%]
     }
 
+    .olk{
+        @apply bg-black h-[350px] w-[25%] rounded-lg shadow-lg shadow-gray-700 text-white text-center p-6
+    }
 }
