--- a/distribution/style.css
+++ b/distribution/style.css
@@ -604,6 +604,14 @@ video {
   top: 0px;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
 .order-last {
   order: 9999;
 }
@@ -626,12 +634,8 @@ video {
   margin-right: 10px;
 }
 
-.mb-\[52px\] {
-  margin-bottom: 52px;
-}
-
-.ml-12 {
-  margin-left: 3rem;
+.mb-\[35px\] {
+  margin-bottom: 35px;
 }
 
 .ml-4 {
@@ -644,6 +648,10 @@ video {
 
 .ml-\[-2px\] {
   margin-left: -2px;
+}
+
+.ml-\[55px\] {
+  margin-left: 55px;
 }
 
 .mr-5 {
@@ -674,20 +682,34 @@ video {
   margin-top: 80px;
 }
 
-.mb-\[40px\] {
-  margin-bottom: 40px;
+.mt-4 {
+  margin-top: 1rem;
 }
 
-.ml-\[52px\] {
-  margin-left: 52px;
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
-.mb-\[35px\] {
-  margin-bottom: 35px;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
-.ml-\[55px\] {
-  margin-left: 55px;
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-6 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 6;
 }
 
 .flex {
@@ -714,6 +736,22 @@ video {
   height: 100vh;
 }
 
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
+.h-28 {
+  height: 7rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
 .w-\[100\%\] {
   width: 100%;
 }
@@ -738,6 +776,26 @@ video {
   width: auto;
 }
 
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -748,6 +806,10 @@ video {
 
 .place-content-center {
   place-content: center;
+}
+
+.content-center {
+  align-content: center;
 }
 
 .items-center {
@@ -774,12 +836,28 @@ video {
   gap: 0.5rem;
 }
 
+.text-ellipsis {
+  text-overflow: ellipsis;
+}
+
+.text-clip {
+  text-overflow: clip;
+}
+
 .text-nowrap {
   text-wrap: nowrap;
 }
 
+.text-balance {
+  text-wrap: balance;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-\[50\%\] {
+  border-radius: 50%;
 }
 
 .bg-black {
@@ -790,6 +868,11 @@ video {
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .p-0 {
@@ -804,6 +887,14 @@ video {
   padding: 8px;
 }
 
+.p-5 {
+  padding: 1.25rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
@@ -814,8 +905,16 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 .align-middle {
@@ -892,6 +991,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
 .transition {
