--- a/distribution/style.css
+++ b/distribution/style.css
@@ -579,23 +579,6 @@ video {
   width: 100%;
 }
 
-.olk {
-  height: 350px;
-  width: 25%;
-  border-radius: 0.5rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-  padding: 1.5rem;
-  text-align: center;
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  --tw-shadow-color: #374151;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .sticky {
   position: sticky;
 }
@@ -626,8 +609,12 @@ video {
   margin-right: 10px;
 }
 
-.mb-\[35px\] {
-  margin-bottom: 35px;
+.mb-11 {
+  margin-bottom: 2.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .ml-4 {
@@ -642,10 +629,6 @@ video {
   margin-left: -2px;
 }
 
-.ml-\[55px\] {
-  margin-left: 55px;
-}
-
 .mr-5 {
   margin-right: 1.25rem;
 }
@@ -654,16 +637,12 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .mt-\[11px\] {
   margin-top: 11px;
-}
-
-.mt-\[120px\] {
-  margin-top: 120px;
 }
 
 .mt-\[15px\] {
@@ -680,46 +659,6 @@ video {
 
 .mt-\[80px\] {
   margin-top: 80px;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-\[300px\] {
-  margin-top: 300px;
-}
-
-.ml-44 {
-  margin-left: 11rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
-}
-
-.mb-11 {
-  margin-bottom: 2.75rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .flex {
@@ -746,10 +685,6 @@ video {
   height: 100vh;
 }
 
-.w-16 {
-  width: 4rem;
-}
-
 .w-\[100\%\] {
   width: 100%;
 }
@@ -770,11 +705,11 @@ video {
   width: 70%;
 }
 
-.w-auto {
+.w-\[auto\] {
   width: auto;
 }
 
-.w-\[auto\] {
+.w-auto {
   width: auto;
 }
 
@@ -794,14 +729,6 @@ video {
   place-content: end;
 }
 
-.place-items-center {
-  place-items: center;
-}
-
-.content-center {
-  align-content: center;
-}
-
 .items-center {
   align-items: center;
 }
@@ -814,10 +741,6 @@ video {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
 .justify-items-center {
   justify-items: center;
 }
@@ -828,10 +751,6 @@ video {
 
 .text-nowrap {
   text-wrap: nowrap;
-}
-
-.rounded-\[50\%\] {
-  border-radius: 50%;
 }
 
 .rounded-md {
@@ -848,36 +767,12 @@ video {
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-slate-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-slate-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
-}
-
 .p-0 {
   padding: 0px;
 }
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
 }
 
 .p-\[8px\] {
@@ -949,10 +844,6 @@ video {
   font-weight: 300;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -983,20 +874,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-slate-400 {
-  --tw-text-opacity: 1;
-  color: rgb(148 163 184 / var(--tw-text-opacity));
-}
-
-.text-slate-700 {
-  --tw-text-opacity: 1;
-  color: rgb(51 65 85 / var(--tw-text-opacity));
-}
-
-.underline {
-  text-decoration-line: underline;
-}
-
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1013,6 +890,39 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* <!-- <section class="h-screen mt-[120px] place-content-center">
+<h2 class="font-main text-2xl font-bold mb-[35px] ml-[55px]">About Me</h2>
+<div class=" flex  justify-around">
+    <div class="olk hover:translate-z-1 hover:scale-110 duration-500">
+        <div class="flex justify-center  ">
+            <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
+        </div>
+        <p class="content-center text-center mt-2 font-main p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+            fugiat tempore adipisci
+            nulla quia quod! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque odit quis
+            nobis non,</p>
+    </div>
+    <div class="olk hover:translate-z-1 hover:scale-110 duration-500">
+        <div class="flex justify-center  ">
+            <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
+        </div>
+        <p class="content-center text-center mt-2 font-main p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+            fugiat tempore adipisci
+            nulla quia quod! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque odit quis
+            nobis non,</p>
+    </div>
+    <div class="olk hover:translate-z-1 hover:scale-110 duration-500">
+        <div class="flex justify-center  ">
+            <img class="bg-white mt-5 rounded-[50%] h-16 w-16 items-center" src="education.png" alt="">
+        </div>
+        <p class="content-center text-center mt-2 font-main p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+            fugiat tempore adipisci
+            nulla quia quod! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque odit quis
+            nobis non, justify-aroundejr wenfher --watchwnwofnr</p>
+    </div>
+</div>
+</section> --> */
+
 .hover\:scale-110:hover {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
@@ -1027,8 +937,4 @@ video {
 .hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.hover\:underline:hover {
-  text-decoration-line: underline;
 }
