--- a/source/input.css
+++ b/source/input.css
@@ -24,7 +24,10 @@
         @apply h-8 w-8 
     }
     .skl{
-        @apply h-28 w-7
+        @apply content-center text-center rounded-lg mb-6 mr-6 flex items-center font-main text-base font-bold py-2 px-6 bg-gray-300 text-gray-800 
+    }
+    .slkimg{
+        @apply mr-2 h-10 w-10
     }
 }
 
