--- a/distribution/style.css
+++ b/distribution/style.css
@@ -612,6 +612,17 @@ video {
   width: 2.5rem;
 }
 
+.resources {
+  margin-top: 0.75rem;
+  cursor: pointer;
+  transition-duration: 300ms;
+}
+
+.resources:hover {
+  --tw-text-opacity: 1;
+  color: rgb(36 38 44 / var(--tw-text-opacity));
+}
+
 .fixed {
   position: fixed;
 }
@@ -628,16 +639,8 @@ video {
   top: 0px;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .order-last {
   order: 9999;
-}
-
-.float-end {
-  float: inline-end;
 }
 
 .float-right {
@@ -650,6 +653,10 @@ video {
 
 .m-0 {
   margin: 0px;
+}
+
+.m-8 {
+  margin: 2rem;
 }
 
 .mx-2 {
@@ -714,10 +721,6 @@ video {
   margin-top: 0.75rem;
 }
 
-.mt-40 {
-  margin-top: 10rem;
-}
-
 .mt-7 {
   margin-top: 1.75rem;
 }
@@ -742,26 +745,6 @@ video {
   margin-top: 80px;
 }
 
-.mt-60 {
-  margin-top: 15rem;
-}
-
-.mb-0 {
-  margin-bottom: 0px;
-}
-
-.mt-56 {
-  margin-top: 14rem;
-}
-
-.mt-80 {
-  margin-top: 20rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .flex {
   display: flex;
 }
@@ -778,12 +761,16 @@ video {
   height: 2.5rem;
 }
 
+.h-11 {
+  height: 2.75rem;
+}
+
 .h-16 {
   height: 4rem;
 }
 
-.h-2\/4 {
-  height: 50%;
+.h-3\/4 {
+  height: 75%;
 }
 
 .h-3\/6 {
@@ -802,6 +789,10 @@ video {
   height: 100%;
 }
 
+.h-\[1px\] {
+  height: 1px;
+}
+
 .h-\[350px\] {
   height: 350px;
 }
@@ -810,24 +801,12 @@ video {
   height: 100vh;
 }
 
-.h-80 {
-  height: 20rem;
-}
-
-.h-3\/4 {
-  height: 75%;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
 .w-10 {
   width: 2.5rem;
+}
+
+.w-10\/12 {
+  width: 83.333333%;
 }
 
 .w-3\/4 {
@@ -874,32 +853,66 @@ video {
   width: 100%;
 }
 
-.w-1\/2 {
-  width: 50%;
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.w-1\/3 {
-  width: 33.333333%;
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.w-\[75\%\] {
-  width: 75%;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-9\/12 {
-  width: 75%;
-}
-
-.flex-auto {
-  flex: 1 1 auto;
+.animate-spin {
+  animation: spin 1s linear infinite;
 }
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-move {
+  cursor: move;
+}
+
+.cursor-wait {
+  cursor: wait;
+}
+
+.cursor-no-drop {
+  cursor: no-drop;
+}
+
+.cursor-crosshair {
+  cursor: crosshair;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
+}
+
+.cursor-context-menu {
+  cursor: context-menu;
+}
+
+.cursor-cell {
+  cursor: cell;
+}
+
+.cursor-progress {
+  cursor: progress;
+}
+
+.cursor-alias {
+  cursor: alias;
+}
+
+.cursor-col-resize {
+  cursor: col-resize;
+}
+
+.cursor-help {
+  cursor: help;
 }
 
 .list-none {
@@ -926,16 +939,8 @@ video {
   align-content: flex-end;
 }
 
-.items-end {
-  align-items: flex-end;
-}
-
 .items-center {
   align-items: center;
-}
-
-.items-baseline {
-  align-items: baseline;
 }
 
 .justify-center {
@@ -946,20 +951,20 @@ video {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
 .justify-items-center {
   justify-items: center;
 }
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .text-nowrap {
@@ -974,35 +979,9 @@ video {
   border-radius: 0.375rem;
 }
 
-.border-b-8 {
-  border-bottom-width: 8px;
-}
-
-.border-b-4 {
-  border-bottom-width: 4px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.border-inherit {
-  border-color: inherit;
-}
-
-.border-b-black {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.border-b-gray-500 {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(107 114 128 / var(--tw-border-opacity));
+.bg-\[\#31343f\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(49 52 63 / var(--tw-bg-opacity));
 }
 
 .bg-black {
@@ -1025,26 +1004,6 @@ video {
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
-.bg-green-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
-
-.bg-orange-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1061,6 +1020,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
 .p-\[8px\] {
   padding: 8px;
 }
@@ -1070,13 +1033,23 @@ video {
   padding-right: 1.75rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.pb-5 {
-  padding-bottom: 1.25rem;
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .text-center {
@@ -1085,10 +1058,6 @@ video {
 
 .align-middle {
   vertical-align: middle;
-}
-
-.align-bottom {
-  vertical-align: bottom;
 }
 
 .font-main {
@@ -1143,8 +1112,14 @@ video {
   font-weight: 300;
 }
 
-.font-thin {
-  font-weight: 100;
+.text-\[\#31343f\] {
+  --tw-text-opacity: 1;
+  color: rgb(49 52 63 / var(--tw-text-opacity));
+}
+
+.text-\[\#43454a\] {
+  --tw-text-opacity: 1;
+  color: rgb(67 69 74 / var(--tw-text-opacity));
 }
 
 .text-black {
@@ -1195,8 +1170,16 @@ video {
   transition-duration: 150ms;
 }
 
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-150 {
+  transition-duration: 150ms;
 }
 
 .ease-in-out {
@@ -1251,7 +1234,20 @@ video {
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
+.hover\:fill-slate-200:hover {
+  fill: #e2e8f0;
+}
+
+.hover\:text-\[\#24262c\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(36 38 44 / var(--tw-text-opacity));
+}
+
 .hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.hover\:underline:hover {
+  text-decoration-line: underline;
 }
