--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -58,7 +58,7 @@
             }
         </script> -->
 
-</body> 
+    </body>
 
     </html>
 
@@ -87,10 +87,13 @@
             </div>
 
             <div class="order-last  flex mr-5">
-
-                <a class=" items-center flex gap-2" href="https://github.com/Sarthak4321" target="_blank">
-                    <img class="" width="37" height="37" src="https://img.icons8.com/windows/64/github.png"
+           
+                <a class=" items-center flex gap-2" href="https://github.com/Sarthak4321"  target="_blank">
+                    <img class="" width="37"  src="https://img.icons8.com/windows/64/github.png" height="37" 
                         alt="github" />
+
+                    <!-- <script src="https://cdn.lottielab.com/s/lottie-player@1.x/player-web.min.js"></script>
+                    <lottie-player src="https://cdn.lottielab.com/l/3idzxDg6rnsFB1.json" loop autoplay></lottie-player> -->
                     <span class="font-bold font-main  hover:text-gray-700 text-gray-500">Github</span>
                 </a>
 
@@ -167,8 +170,8 @@
             </div>
             <div>
                 <!-- <img class="h-[350px] w-[350px] " src="secound_2-removebg.png" alt=""> -->
-                 <img src="./secound_2-removebg.png" alt=""> 
-         </div> 
+                <img src="./secound_2-removebg.png" alt="">
+            </div>
         </div>
     </section>
 
@@ -215,15 +218,17 @@
             <div class=" rounded-lg h-auto">
                 <div class="ml-10 mb-10">
                     <h4 class="text-3xl font-bold">Let's Work Together!</h4>
-                    <p class="font-main-poppins text-sm font-bold  text-gray-500">Leave your email and Massage, I will contact you shortly</p>
+                    <p class="font-main-poppins text-sm font-bold  text-gray-500">Leave your email and Massage, I will
+                        contact you shortly</p>
                 </div>
 
                 <div class=" align-middle mt-2 h-full mx-4 ml-10 ">
 
-                    <form action="post" class="">
-                        <input type="email" placeholder="Enter Your mail"
+                    <form action="/massage" method="post" class="">
+                        <input type="email" name="email" placeholder="Enter Your mail"
                             class="inline-block  p-3 rounded-lg  border-hidden mx-1">
-                        <input type="text" placeholder=" Leave a Massage" class="border-none  p-3 rounded-lg">
+                        <input type="text" name="text" placeholder=" Leave a Massage"
+                            class="border-none  p-3 rounded-lg">
                         <button type="submit"
                             class="bg-black py-3 px-8 rounded-lg hover:bg-gray-600 text-white mx-7 border-none ">SEND</button>
                     </form>
