setting up mongodb Atlas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <!-- <script>
+        <script>
             // Wait 3 seconds and then show the alert
             setTimeout(() => {
                 document.getElementById('alert').classList.remove('hidden');
@@ -56,14 +56,11 @@
             function clicked() {
                 document.getElementById('alert').style.display = "none";
             }
-        </script> -->
+        </script>
 
     </body>
 
     </html>
-
-
-
 
     <nav class="bg-slate-200 h-16 place-content-center w-[100%] sticky top-0">
 
@@ -91,9 +88,6 @@
                 <a class=" items-center flex gap-2" href="https://github.com/Sarthak4321"  target="_blank">
                     <img class="" width="37"  src="https://img.icons8.com/windows/64/github.png" height="37" 
                         alt="github" />
-
-                    <!-- <script src="https://cdn.lottielab.com/s/lottie-player@1.x/player-web.min.js"></script>
-                    <lottie-player src="https://cdn.lottielab.com/l/3idzxDg6rnsFB1.json" loop autoplay></lottie-player> -->
                     <span class="font-bold font-main  hover:text-gray-700 text-gray-500">Github</span>
                 </a>
 
@@ -102,7 +96,7 @@
 
         </div>
 
-    </nav>
+    </nav> 
 
 
 
